<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5039"
    android:fitsSystemWindows="true"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imgArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:textColor="#ffffff"
        android:tint="@color/white"
        tools:ignore="UseAppTint"
        android:contentDescription="@string/nothing" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/register_yourself"
        android:textColor="#ffffff"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRegister"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/baseline_account_box_24"
        android:drawablePadding="10dp"
        android:hint="@string/enter_your_name_min_3_characters"
        android:padding="10dp"
        android:maxLines="1"
        android:maxLength="30"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email_address_register"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:maxLength="30"
        />

    <EditText
        android:id="@+id/edtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtEmail"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/baseline_smartphone_24"
        android:drawablePadding="10dp"
        android:hint="@string/mobile_number_10_digits_register"
        android:padding="10dp"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="10"
        />

    <EditText
        android:id="@+id/edtDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtMobile"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/baseline_location_on_24"
        android:drawablePadding="10dp"
        android:hint="@string/delivery_adderess"
        android:padding="10dp"
        android:maxLines="1"
        android:maxLength="30"
        />

    <EditText
        android:id="@+id/edtChoosePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtDelivery"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/choose_a_password_min_4_characters"
        android:padding="10dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="30"
        />

    <EditText
        android:id="@+id/edtConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtChoosePass"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:padding="10dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="30"
        />
<Button
    android:id="@+id/btnRegister"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:textAllCaps="false"
    android:layout_below="@+id/edtConfirmPass"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="15dp"
    android:backgroundTint="#EE2732"
    android:textColor="#ffffff"
    android:textSize="20sp"
    android:padding="15dp"
    />
</RelativeLayout>