<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5039">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/frunner_shortlogo" />

    <TextView
        android:id="@+id/txtEnterDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
    android:textColor="@color/white"
        android:layout_below="@+id/imgLogo"
        android:textSize="15sp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/edtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEnterDetails"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:hint="@string/mobile_number_10_digits"
        android:padding="10dp"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="10"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtMobile"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/email_address"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:maxLength="30"
        />
<Button
    android:id="@+id/btnNext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/next_txt_btn"
   android:textAllCaps="false"
    android:layout_marginHorizontal="15dp"
    android:layout_below="@+id/edtEmail"
android:layout_marginTop="10dp"
    android:backgroundTint="#EE2732"
    android:textColor="@color/white"
    android:textSize="18sp"
    />





</RelativeLayout>